#Exercise 1 - Included Book and Author entities and book services implementation